Fixed backface-visibility error in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1133,6 +1133,7 @@ input, select, textarea {
 		-webkit-transform: scale(1.0);
 		-ms-transform: scale(1.0);
 		transform: scale(1.0);
+		backface-visibility: hidden;
 		-webkit-backface-visibility: hidden;
 		position: fixed;
 		top: 0;
